// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<table
  className="data boxed-padding zebra"
>
  <ComponentsHeader
    baseComponent={
      {
        "branch": "develop",
        "key": "foo",
        "name": "Foo",
        "qualifier": "TRK",
      }
    }
    canBePinned={true}
    metrics={
      [
        "coverage",
      ]
    }
    rootComponent={
      {
        "branch": "develop",
        "key": "foo",
        "name": "Foo",
        "qualifier": "TRK",
      }
    }
  />
  <tbody>
    <withScrollTo(Component)
      canBePinned={true}
      component={
        {
          "branch": "develop",
          "key": "foo",
          "name": "Foo",
          "qualifier": "TRK",
        }
      }
      hasBaseComponent={false}
      isBaseComponent={true}
      key="foo"
      metrics={
        [
          {
            "id": "1",
            "key": "coverage",
            "name": "Coverage",
            "type": "PERCENT",
          },
        ]
      }
      rootComponent={
        {
          "branch": "develop",
          "key": "foo",
          "name": "Foo",
          "qualifier": "TRK",
        }
      }
    />
    <tr
      className="blank"
    >
      <td
        colSpan={3}
      >
        <hr
          className="null-spacer-top"
        />
      </td>
      <td
        colSpan={5}
      >
        <hr
          className="null-spacer-top"
        />
      </td>
    </tr>
    <withScrollTo(Component)
      canBePinned={true}
      canBrowse={true}
      component={
        {
          "branch": "develop",
          "key": "foo",
          "name": "Foo",
          "qualifier": "TRK",
        }
      }
      hasBaseComponent={true}
      key="foo/develop"
      metrics={
        [
          {
            "id": "1",
            "key": "coverage",
            "name": "Coverage",
            "type": "PERCENT",
          },
        ]
      }
      rootComponent={
        {
          "branch": "develop",
          "key": "foo",
          "name": "Foo",
          "qualifier": "TRK",
        }
      }
    />
    <tr
      className="blank"
    >
      <td
        colSpan={3}
      />
      <td
        colSpan={5}
      />
    </tr>
  </tbody>
</table>
`;

exports[`renders correctly for a search 1`] = `
<table
  className="data boxed-padding zebra"
>
  <tbody>
    <withScrollTo(Component)
      canBrowse={true}
      component={
        {
          "branch": "develop",
          "key": "foo",
          "name": "Foo",
          "qualifier": "TRK",
        }
      }
      hasBaseComponent={false}
      key="foo/develop"
      metrics={[]}
      rootComponent={
        {
          "branch": "develop",
          "key": "foo",
          "name": "Foo",
          "qualifier": "TRK",
        }
      }
    />
    <tr
      className="blank"
    >
      <td
        colSpan={3}
      />
      <td
        colSpan={4}
      />
    </tr>
  </tbody>
</table>
`;

exports[`renders correctly for leak 1`] = `
<table
  className="data boxed-padding zebra"
>
  <ComponentsHeader
    baseComponent={
      {
        "branch": "develop",
        "key": "foo",
        "name": "Foo",
        "qualifier": "TRK",
      }
    }
    canBePinned={true}
    metrics={
      [
        "coverage",
      ]
    }
    rootComponent={
      {
        "branch": "develop",
        "key": "foo",
        "name": "Foo",
        "qualifier": "TRK",
      }
    }
  />
  <tbody>
    <withScrollTo(Component)
      branchLike={
        {
          "analysisDate": "2018-01-01",
          "excludedFromPurge": true,
          "isMain": false,
          "name": "feature",
        }
      }
      canBePinned={true}
      component={
        {
          "branch": "develop",
          "key": "foo",
          "name": "Foo",
          "qualifier": "TRK",
        }
      }
      hasBaseComponent={false}
      isBaseComponent={true}
      key="foo"
      metrics={
        [
          {
            "id": "1",
            "key": "coverage",
            "name": "Coverage",
            "type": "PERCENT",
          },
        ]
      }
      rootComponent={
        {
          "branch": "develop",
          "key": "foo",
          "name": "Foo",
          "qualifier": "TRK",
        }
      }
    />
    <tr
      className="blank"
    >
      <td
        colSpan={3}
      >
        <hr
          className="null-spacer-top"
        />
      </td>
      <td
        colSpan={5}
      >
        <hr
          className="null-spacer-top"
        />
      </td>
    </tr>
    <withScrollTo(Component)
      branchLike={
        {
          "analysisDate": "2018-01-01",
          "excludedFromPurge": true,
          "isMain": false,
          "name": "feature",
        }
      }
      canBePinned={true}
      canBrowse={true}
      component={
        {
          "branch": "develop",
          "key": "foo",
          "name": "Foo",
          "qualifier": "TRK",
        }
      }
      hasBaseComponent={true}
      key="foo/develop"
      metrics={
        [
          {
            "id": "1",
            "key": "coverage",
            "name": "Coverage",
            "type": "PERCENT",
          },
        ]
      }
      rootComponent={
        {
          "branch": "develop",
          "key": "foo",
          "name": "Foo",
          "qualifier": "TRK",
        }
      }
    />
    <tr
      className="blank"
    >
      <td
        colSpan={3}
      />
      <td
        colSpan={5}
      />
    </tr>
  </tbody>
</table>
`;
